k8s/base/database/statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: url-db
  namespace: url-shortener
spec:
  serviceName: url-db-service
  replicas: 1
  selector:
    matchLabels:
      role: database
  template:
    metadata:
      labels:
        role: database
        tier: data
    spec:
      containers:
        - image: docker.io/library/mysql
          name: url-db
          volumeMounts:
            - name: url-db-storage
              mountPath: /var/lib/mysql
          startupProbe:
            exec:
              command:
                - mysqladmin
                - ping
                - -h
                - localhost
            periodSeconds: 10
            failureThreshold: 30  # 300 seconds for initial startup
          livenessProbe:
            exec:
              command:
                - mysqladmin
                - ping
                - -h
                - localhost
            periodSeconds: 10
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command:
                - mysqladmin
                - ping
                - -h
                - localhost
            periodSeconds: 5
            timeoutSeconds: 3
  volumeClaimTemplates:
    - metadata:
        name: url-db-storage
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: local-path
        # storageClassName: standard
        resources:
          requests:
            storage: 1Gi
