k8s/base/database/service.yml
apiVersion: v1
kind: Service
metadata:
  name: url-db-service
  namespace: url-shortener
spec:
  selector:
    role: database
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
