k8s/base/database/networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: url-db-deny-all
  namespace: url-shortener
spec:
  podSelector:
    matchLabels:
      tier: data
  policyTypes:
    - Ingress
    - Egress
  ingress: []
  egress: []

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: url-db-allow-be-inbound
  namespace: url-shortener
spec:
  podSelector:
    matchLabels:
      tier: data
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              tier: logic
      ports:
        - protocol: TCP
          port: 5432
